--- a/models/course/fields.yaml
+++ b/models/course/fields.yaml
@@ -1,21 +1,13 @@
 fields:
     name:
         label: Name
-        span: auto
-        placeholder: ''
-        default: ''
-        cssClass: ''
+        span: left
         type: text
     description:
         label: Description
         span: auto
-        placeholder: ''
-        default: ''
-        cssClass: ''
-        type: textarea
+        type: text
     is_active:
         label: 'Is active'
         span: full
-        placeholder: ''
-        cssClass: ''
         type: checkbox
