--- a/plugin.yaml
+++ b/plugin.yaml
@@ -18,3 +18,7 @@ navigation:
                 label: 'eduzoneco.management::lang.navigation.course'
                 url: eduzoneco/management/courses
                 icon: icon-puzzle-piece
+            Lesson:
+                label: Lesson
+                url: eduzoneco/management/lessons
+                icon: icon-list
