--- a/plugin.yaml
+++ b/plugin.yaml
@@ -18,7 +18,7 @@ navigation:
                 label: 'eduzoneco.management::lang.navigation.course'
                 url: eduzoneco/management/courses
                 icon: icon-puzzle-piece
-            Lesson:
-                label: Lesson
+            lesson:
+                label: 'eduzoneco.management::lang.navigation.lesson'
                 url: eduzoneco/management/lessons
                 icon: icon-list
