--- a/models/lesson/fields.yaml
+++ b/models/lesson/fields.yaml
@@ -24,3 +24,6 @@ fields:
         label: 'Is active'
         span: auto
         type: checkbox
+    course:
+        label: Categories
+        type: relation
