add relation on columns of Lesson

--- a/models/lesson/columns.yaml
+++ b/models/lesson/columns.yaml
@@ -1,4 +1,7 @@
 columns:
+    course[name]:
+        label: 'eduzoneco.management::lang.lesson.form.course_label'
+        type: text
     title:
         label: 'eduzoneco.management::lang.lesson.list.title'
         type: text
