--- a/models/course/columns.yaml
+++ b/models/course/columns.yaml
@@ -1,23 +1,20 @@
 columns:
-    id:
-        label: id
-        type: number
     name:
-        label: name
+        label: 'eduzoneco.management::lang.course.list.name'
         type: text
         searchable: true
     description:
-        label: description
+        label: 'eduzoneco.management::lang.course.list.description'
         type: text
     is_active:
-        label: is_active
-        type: text
+        label: 'eduzoneco.management::lang.general.is_active'
+        type: switch
     created_at:
-        label: created_at
-        type: datetime
+        label: 'eduzoneco.management::lang.general.created_at'
+        type: timesince
     updated_at:
-        label: updated_at
-        type: datetime
+        label: 'eduzoneco.management::lang.general.updated_at'
+        type: timesince
     deleted_at:
-        label: deleted_at
-        type: datetime
+        label: 'eduzoneco.management::lang.general.deleted_at'
+        type: timesince
