--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -21,3 +21,6 @@
 1.0.8:
     - 'Updated table eduzoneco_management_lessons'
     - builder_table_update_eduzoneco_management_lessons.php
+1.0.9:
+    - 'Updated table eduzoneco_management_activities'
+    - builder_table_update_eduzoneco_management_activities.php
