add atributte translatable in course model

--- a/models/course/fields.yaml
+++ b/models/course/fields.yaml
@@ -4,7 +4,7 @@ fields:
         span: row
         type: text
         spanClass: col-6
-        validation: required
+        translatable: true
     coursecategories:
         label: 'eduzoneco.management::lang.course.form.coursecategories'
         type: relation
