created cards of courses

--- a/models/course/fields.yaml
+++ b/models/course/fields.yaml
@@ -1,4 +1,8 @@
 fields:
+    card_image:
+        label: Cardimage
+        type: fileupload
+        mode: image
     name:
         label: 'eduzoneco.management::lang.course.form.name'
         span: row
