updated component courselist
for show the courses loged user

--- a/models/lesson/columns_activity.yaml
+++ b/models/lesson/columns_activity.yaml
@@ -8,7 +8,9 @@ columns:
         searchable: true
     description:
         label: 'eduzoneco.management::lang.activity.list.description'
-        type: text
+        type: summary
+        limitWords: 5
+        endChars: "..."
     difficulty:
         label: 'eduzoneco.management::lang.activity.list.difficulty'
         type: text
